WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
85290
[Chromium] Fix WebPrerender::referrer() thunk.
https://bugs.webkit.org/show_bug.cgi?id=85290
Summary
[Chromium] Fix WebPrerender::referrer() thunk.
Gavin Peters
Reported
2012-05-01 09:22:23 PDT
[Chromium] Fix WebPrerender::referrer() thunk.
Attachments
Patch
(1.33 KB, patch)
2012-05-01 09:23 PDT
,
Gavin Peters
no flags
Details
Formatted Diff
Diff
Patch
(1.35 KB, patch)
2012-05-01 09:39 PDT
,
Gavin Peters
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Gavin Peters
Comment 1
2012-05-01 09:23:51 PDT
Created
attachment 139638
[details]
Patch
Gavin Peters
Comment 2
2012-05-01 09:25:14 PDT
Amazingly, this code built fine in my clang, but it caused much trouble in gcc. Abarth, WDYT?
WebKit Review Bot
Comment 3
2012-05-01 09:28:30 PDT
Please wait for approval from
abarth@webkit.org
,
dglazkov@chromium.org
,
fishd@chromium.org
,
jamesr@chromium.org
or
tkent@chromium.org
before submitting, as this patch contains changes to the Chromium public API. See also
https://trac.webkit.org/wiki/ChromiumWebKitAPI
.
WebKit Review Bot
Comment 4
2012-05-01 09:28:53 PDT
Attachment 139638
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/Platform/ChangeLog', u'Source/Platf..." exit_code: 1 Source/Platform/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Gavin Peters
Comment 5
2012-05-01 09:39:21 PDT
Created
attachment 139641
[details]
Patch
Gavin Peters
Comment 6
2012-05-01 09:42:37 PDT
webkit-patch is funny about changelogs and committed changes. This second upload should have a good patch.
Gavin Peters
Comment 7
2012-05-01 10:59:34 PDT
(note: this fix is in relation to
bug 84880
)
Dimitri Glazkov (Google)
Comment 8
2012-05-01 11:02:23 PDT
Comment on
attachment 139641
[details]
Patch doh.
WebKit Review Bot
Comment 9
2012-05-01 11:22:31 PDT
Comment on
attachment 139641
[details]
Patch Clearing flags on attachment: 139641 Committed
r115739
: <
http://trac.webkit.org/changeset/115739
>
WebKit Review Bot
Comment 10
2012-05-01 11:22:38 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug