[Chromium] Fix WebPrerender::referrer() thunk. https://bugs.webkit.org/show_bug.cgi?id=85290

Reviewed by Dimitri Glazkov.

* chromium/public/WebPrerender.h:
(WebKit::WebPrerender::referrer):


Canonical link: https://commits.webkit.org/102833@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@115739 268f45cc-cd09-0410-ab3c-d52691b4dbfc